[gd_scene load_steps=61 format=3 uid="uid://sh73dtkekek1"]

[ext_resource type="Script" path="res://test.gd" id="1_pm1lo"]
[ext_resource type="Texture2D" uid="uid://cyt6bgqhhsu0f" path="res://assets/Skeleton enemy/Skeleton enemy.png" id="2_s6bsj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cauf2"]
atlas = ExtResource("2_s6bsj")
region = Rect2(0, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwfay"]
atlas = ExtResource("2_s6bsj")
region = Rect2(64, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1h1v"]
atlas = ExtResource("2_s6bsj")
region = Rect2(128, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38vs"]
atlas = ExtResource("2_s6bsj")
region = Rect2(192, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_72twd"]
atlas = ExtResource("2_s6bsj")
region = Rect2(256, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7hht"]
atlas = ExtResource("2_s6bsj")
region = Rect2(320, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tijb"]
atlas = ExtResource("2_s6bsj")
region = Rect2(384, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kaxb"]
atlas = ExtResource("2_s6bsj")
region = Rect2(448, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcfi3"]
atlas = ExtResource("2_s6bsj")
region = Rect2(512, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_naqap"]
atlas = ExtResource("2_s6bsj")
region = Rect2(576, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgl7q"]
atlas = ExtResource("2_s6bsj")
region = Rect2(640, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkbjt"]
atlas = ExtResource("2_s6bsj")
region = Rect2(704, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4pgx"]
atlas = ExtResource("2_s6bsj")
region = Rect2(768, 0, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_syp3d"]
atlas = ExtResource("2_s6bsj")
region = Rect2(0, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_c41t5"]
atlas = ExtResource("2_s6bsj")
region = Rect2(64, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1w2l"]
atlas = ExtResource("2_s6bsj")
region = Rect2(128, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_q68gu"]
atlas = ExtResource("2_s6bsj")
region = Rect2(192, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty3qg"]
atlas = ExtResource("2_s6bsj")
region = Rect2(256, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj1y6"]
atlas = ExtResource("2_s6bsj")
region = Rect2(320, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj5dt"]
atlas = ExtResource("2_s6bsj")
region = Rect2(384, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_08rhf"]
atlas = ExtResource("2_s6bsj")
region = Rect2(448, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ium28"]
atlas = ExtResource("2_s6bsj")
region = Rect2(512, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ibkh"]
atlas = ExtResource("2_s6bsj")
region = Rect2(576, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_l27qw"]
atlas = ExtResource("2_s6bsj")
region = Rect2(640, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_gba5p"]
atlas = ExtResource("2_s6bsj")
region = Rect2(704, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_u66i2"]
atlas = ExtResource("2_s6bsj")
region = Rect2(768, 58, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_1513m"]
atlas = ExtResource("2_s6bsj")
region = Rect2(0, 255, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_hve4g"]
atlas = ExtResource("2_s6bsj")
region = Rect2(64, 255, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uqnh"]
atlas = ExtResource("2_s6bsj")
region = Rect2(128, 255, 64, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdx6v"]
atlas = ExtResource("2_s6bsj")
region = Rect2(0, 183, 64, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7m4r"]
atlas = ExtResource("2_s6bsj")
region = Rect2(64, 183, 64, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_h26mn"]
atlas = ExtResource("2_s6bsj")
region = Rect2(128, 183, 64, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_167sa"]
atlas = ExtResource("2_s6bsj")
region = Rect2(192, 183, 64, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_va708"]
atlas = ExtResource("2_s6bsj")
region = Rect2(0, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0hom"]
atlas = ExtResource("2_s6bsj")
region = Rect2(64, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtccp"]
atlas = ExtResource("2_s6bsj")
region = Rect2(128, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jryu"]
atlas = ExtResource("2_s6bsj")
region = Rect2(192, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5lpu"]
atlas = ExtResource("2_s6bsj")
region = Rect2(256, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhelk"]
atlas = ExtResource("2_s6bsj")
region = Rect2(320, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1axi"]
atlas = ExtResource("2_s6bsj")
region = Rect2(384, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgnlx"]
atlas = ExtResource("2_s6bsj")
region = Rect2(448, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lc4q"]
atlas = ExtResource("2_s6bsj")
region = Rect2(512, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_do15h"]
atlas = ExtResource("2_s6bsj")
region = Rect2(576, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_olmf2"]
atlas = ExtResource("2_s6bsj")
region = Rect2(640, 120, 64, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_14f3t"]
atlas = ExtResource("2_s6bsj")
region = Rect2(704, 120, 64, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_plnp7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cauf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwfay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1h1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72twd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7hht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tijb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kaxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcfi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naqap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgl7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkbjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4pgx")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_syp3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c41t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1w2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q68gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty3qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj1y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj5dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08rhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ium28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ibkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l27qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gba5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u66i2")
}],
"loop": false,
"name": &"die",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1513m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hve4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uqnh")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdx6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7m4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h26mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_167sa")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_va708")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0hom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtccp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jryu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5lpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhelk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1axi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgnlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lc4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do15h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14f3t")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_2rweh"]
resource_name = "Attack"
length = 1.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0, 11, -0.25, 0, 0.25, 0, 12, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/attack hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_pivwy"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/attack hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iwcic"]
resource_name = "attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkeletonEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q5dxy"]
_data = {
"Attack": SubResource("Animation_2rweh"),
"RESET": SubResource("Animation_pivwy"),
"attack": SubResource("Animation_iwcic")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d26vt"]
size = Vector2(20, 43.125)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g7te7"]
radius = 8.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p2dg7"]
radius = 7.07107

[sub_resource type="RectangleShape2D" id="RectangleShape2D_016er"]
size = Vector2(20, 8.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ih85"]
size = Vector2(20, 6)

[sub_resource type="Animation" id="Animation_jaivp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rcldn"]
resource_name = "swing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1idv"]
_data = {
"RESET": SubResource("Animation_jaivp"),
"swing": SubResource("Animation_rcldn")
}

[node name="Zestybones" type="CharacterBody2D"]
position = Vector2(1, -29)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_pm1lo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_plnp7")
animation = &"attack"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_q5dxy")
}

[node name="attack hitbox" type="Area2D" parent="AnimatedSprite2D/AnimationPlayer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/AnimationPlayer/attack hitbox"]
position = Vector2(21, -24)
shape = SubResource("RectangleShape2D_d26vt")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 8)
shape = SubResource("CapsuleShape2D_g7te7")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
light_mask = 2
visibility_layer = 3
position = Vector2(1, -2)
shape = SubResource("CircleShape2D_p2dg7")

[node name="SkeletonEnemy" type="Sprite2D" parent="."]
visible = false
position = Vector2(-120, 2)
scale = Vector2(1.01818, 0.962264)
texture = ExtResource("2_s6bsj")
hframes = 13
vframes = 6
frame = 11

[node name="PlayerDetectorLeft" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectorLeft"]
position = Vector2(22, -9)
shape = SubResource("RectangleShape2D_016er")

[node name="AttackDetectorLeft2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectorLeft2"]
position = Vector2(22, -9)
shape = SubResource("RectangleShape2D_8ih85")
debug_color = Color(0.654902, 0.321569, 1, 0.419608)

[node name="PlayerDetectorRight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectorRight"]
position = Vector2(-29, -9)
shape = SubResource("RectangleShape2D_016er")

[node name="AttackDetectorRight2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectorRight2"]
position = Vector2(-29, -9)
shape = SubResource("RectangleShape2D_8ih85")
debug_color = Color(0.654902, 0.321569, 1, 0.419608)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h1idv")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="AnimatedSprite2D/AnimationPlayer/attack hitbox" to="." method="_on_attack_hitbox_area_entered"]
[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_hitbox_area_shape_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="PlayerDetectorLeft" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="AttackDetectorLeft2" to="." method="_on_attack_detector_body_entered"]
[connection signal="body_entered" from="PlayerDetectorRight" to="." method="_on_player_detector_body_entered"]
